@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-09T00:58:39Z",
-  "count_outdated" : 956,
-  "uniques_outdated" : 563,
-  "count" : 968,
-  "uniques" : 575,
+  "timestamp" : "2025-07-10T00:58:30Z",
+  "count_outdated" : 957,
+  "uniques_outdated" : 564,
+  "count" : 969,
+  "uniques" : 576,
   "clones" : [
-    {
-      "timestamp": "2025-06-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-26T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
