@@ -1,12 +1,7 @@
 {
   "count": 12,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-06-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-26T00:00:00Z",
       "count": 1,
@@ -49,6 +44,11 @@
     },
     {
       "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
